<resources>
    <string name="app_name">Tarkon Warehouse</string>
    <string name="user">Nazwa użytkownika:</string>
    <string name="haslo">Hasło</string>
    <string name="login">LOGIN</string>
    <string name="zaloguj">Zaloguj się</string>
    <string name="newpassword">Nowe hasło</string>
    <string name="oldpassword">Stare hasło</string>
    <string name="zmien">Zmień</string>
    <string name="scanner">Skanuj</string>
    <string name="magazyn">magazyn</string>
    <string name="usun">Inwentaryzacja</string>
    <string name="dodaj">Magazyn</string>
    <string name="znajdz">Znajdź lokalizacje</string>
    <string name="dod">Ustal lokalizację</string>
    <string name="usu">Usuń</string>
    <string name="lok1">Lok 1</string>
    <string name="lok2">Lok 2</string>
    <string name="lok3">Lok 3</string>
    <string name="lok4">Lok 4</string>
    <string name="lok5">Lok 5</string>
    <string name="lok6">Lok 6</string>
    <string name="lok7">Lok 7</string>
    <string name="lok8">Lok 8</string>
    <string name="lok9">Lok 9</string>
    <string name="lok10">Lok 10</string>
    <string name="lok11">Lok 11</string>
    <string name="lok12">Lok 12</string>
    <string name="lok13">Lok 13</string>
    <string name="lok14">Lok 14</string>
    <string name="lok15">Lok 15</string>
    <string name="lok1o">Lok 1 (Aktywne)</string>
    <string name="lok2o">Lok 2 (Aktywne)</string>
    <string name="lok3o">Lok 3 (Aktywne)</string>
    <string name="lok4o">Lok 4 (Aktywne)</string>
    <string name="lok5o">Lok 5 (Aktywne)</string>
    <string name="lok6o">Lok 6 (Aktywne)</string>
    <string name="lok7o">Lok 7 (Aktywne)</string>
    <string name="lok8o">Lok 8 (Aktywne)</string>
    <string name="lok9o">Lok 9 (Aktywne)</string>
    <string name="lok10o">Lok 10 (Aktywne)</string>
    <string name="lok11o">Lok 11 (Aktywne)</string>
    <string name="lok12o">Lok 12 (Aktywne)</string>
    <string name="lok13o">Lok 13 (Aktywne)</string>
    <string name="lok14o">Lok 14 (Aktywne)</string>
    <string name="lok15o">Lok 15 (Aktywne)</string>
    <string name="recznie">Ręcznie</string>
    <string name="recznieo">Ręcznie(Aktywne)</string>
    <string name="przn">Przenieś</string>
    <string name="send">Wyślij</string>
    <string name="arkusz">Nazwa Arkusza</string>
    <string name="koop">KOOP</string>
    <string name="koopo">KOOP(Aktywne)</string>
    <string name="dodaj1">Dodaj jako nowe</string>
    <string name="dodaj2">Dodaj</string>
    <string name="przenies2">Przenieś</string>
    <string name="usun1">Usuń</string>
    <string name="textprzn">Przenieś z lokalizacji:</string>
    <string name="zew">ZEWN</string>
    <string name="zew1">ZEWN(Aktywne)</string>
    <string name="liczba">Wprowadź liczbe arkuszy…</string>
    <string name="haslo1">Podaj hasło…</string>

</resources>