<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundlight"
    android:orientation="vertical"
    tools:context=".main">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />
    <Button
        android:id="@+id/check1"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.4"
        android:text="@string/lok1" />
    <Button
        android:id="@+id/check2"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.4"
        android:text="@string/lok2" />
    <Button
        android:id="@+id/check3"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.4"
        android:text="@string/lok3" />
    <Button
        android:id="@+id/check4"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.4"
        android:text="@string/lok4" />
    <Button
        android:id="@+id/check5"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.4"
        android:text="@string/lok5" />
    <Button
        android:id="@+id/check6"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.4"
        android:text="@string/lok6" />


</LinearLayout>