<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundlight"
    android:orientation="vertical"
    tools:context=".opcjeustallokalizacje">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/opcja1"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.4"
            android:text="@string/dodaj2" />

        <Button
            android:id="@+id/opcja2"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.4"
            android:text="@string/przenies2" />

        <Button
            android:id="@+id/opcja3"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.4"
            android:text="@string/usun1" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dodaj"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.4"
            android:text="@string/dodaj1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/usun"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.4"
            android:text="@string/usun1"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="30dp"
            android:text="@string/textprzn"
            android:visibility="gone" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="30dp"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/przenies"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.4"
            android:text="@string/przn"
            android:visibility="gone"/>

    </LinearLayout>

</LinearLayout>