<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main"
    android:background="@color/backgroundlight"
    android:orientation="vertical">

    <include
      android:id="@+id/toolbar"
      layout="@layout/toolbar" />



    <Button
        android:id="@+id/scanButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/scanner" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/scanButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text=""
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="0.4"
            android:layout_marginTop="10dp"
            android:text="@string/dodaj" />

        <Button
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="0.4"
            android:layout_marginTop="10dp"
            android:text="@string/usun" />

    </LinearLayout>

</LinearLayout>